--- a/README
+++ b/README
@@ -3,5 +3,9 @@ Welcome to the Metaheuristics Repository
 This is a package of Metaheuristic algorithms and problems that can be 
 solved by these algorithms.
 
+Let us use the workflow described here:
+
+https://www.atlassian.com/git/workflows#!workflow-forking
+
 
 
