README edited online with Bitbucket

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Welcome to the Metaheuristics Repository
 This is a package of Metaheuristic algorithms and problems that can be 
 solved by these algorithms.
 
-It is geared towards scientific experimentation and education.
+It is geared towards scientific experimentation and algorithm clarity..
 
 This is a software package still in alpha stage. We do not accept any kind of responsibility when used by others. 
 
